fix page header overflow

--- a/themes/inspera/assets/scss/style.scss
+++ b/themes/inspera/assets/scss/style.scss
@@ -2274,7 +2274,7 @@ $date-col-width: 90px;
 }
 
 .parallax-image-wrapper {
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
@@ -5688,5 +5688,5 @@ $btnEasing: 0.15s ease-in-out;
 } 
 
 .page-header .parallax-image {
-  background-position: 50% 50% !important;
+  background-position: 0 50% !important;
 }
